修改展示界面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="loading_more">loading more</string>
     <string name="load_complete">complete</string>
     <string name="action_search">search</string>
+    <string name="action_download">download</string>
 </resources>
