--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -18,4 +18,7 @@
     <string name="send_to">发送到</string>
     <string name="exit">退出</string>
     <string name="about">关于</string>
+    <string name="login">登陆</string>
+    <string name="loading_user_info">正在加载用户信息</string>
+    <string name="please_oauth">请在打开的网页中授权应用</string>
 </resources>
